[GStreamer] ImageDecoder hits Debug ASSERTs https://bugs.webkit.org/show_bug.cgi?id=213178

Patch by Philippe Normand <pnormand@igalia.com> on 2020-06-15
Reviewed by Xabier Rodriguez-Calvar.

Pass a reference of the decoder to its inner implementation instead of a WeakPtr, which
can't be used across multiple threads.

Covered by fast/images/animated-image-mp4{,-crash}.html tests.

* platform/graphics/gstreamer/ImageDecoderGStreamer.cpp:
(WebCore::ImageDecoderGStreamer::InnerDecoder::connectDecoderPad):
* platform/graphics/gstreamer/ImageDecoderGStreamer.h:

Canonical link: https://commits.webkit.org/225969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263031 268f45cc-cd09-0410-ab3c-d52691b4dbfc